--- a/src/style.css
+++ b/src/style.css
@@ -90,22 +90,18 @@ table {
   margin-bottom: 10px;
 }
 
-tr {
+#score-list li {
   display: flex;
   gap: 10px;
   padding: 7px 10px;
 }
 
-tr:nth-child(odd) {
+li:nth-child(odd) {
   background-color: #e4e4e4;
 }
 
 li {
   list-style: none;
-}
-
-hr {
-  margin-bottom: 10px;
 }
 
 .bookHr {
